appId: com.anonymous.myapp
---
- launchApp

- assertVisible:
    id: "create-session-title"
- tapOn: "ex: Calculus Prep"
- inputText: "Calculus Prep"
- tapOn: "ex: 4"
- inputText: "4"
- tapOn:
    point: "50%, 68%"
- extendedWaitUntil:
    visible: "Location required"
    timeout: 5000
- assertVisible: "Location required"
- tapOn:
    id: "gps-error-dismiss"
- assertVisible:
    id: "create-session-title"